media query adjust to prevent jumping

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1279,7 +1279,7 @@ a.btn {
 
  }
 
- @media (max-width: 1024px) {
+ @media (max-width: 1099px) {
 
    .main-container {
      width: 90%;
